added separate profile page with linking

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                 <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class = "nav-link" rel="tooltip" title="" 
-                        data-placement="bottom" target="_blank" >  </a> 
-                        <!-- add Projects or Work word here      ^ -->
+                        data-placement="bottom" target="_self"  href="./examples/profile-page.html"> About </a> 
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" rel="tooltip" title="" data-placement="bottom" 
@@ -86,15 +85,7 @@
                     <h2>About</h2>
                 </div>
             
-                <p>
-                    Thanks for stopping by my website! 
-                    I recently graduated from Northeastern University in Boston, Massachusetts. 
-                    In the past few years, I've worked at two awesome companies: a small startup called mabl, 
-                    located in downtown Boston, and Google in Cambridge. I've also been lucky to be involved with 
-                    TechTogether Boston, an initiative focused in making tech significantly more inclusive for 
-                    underrepresented groups. Lately, my free time is occupied with digital drawings, baking, YouTube, 
-                    and catching up with friends. 
-                </p>
+                
                 <!--    progress/sliders -->
                 <div id="progress">
                 <div class="row">
@@ -261,10 +252,6 @@
                 <div class="row justify-content-center">
                     <h3>let's connect!</h3>
                 </div>
-                <a id="facebook" class="btn btn-raised btn-facebook" href="https://www.facebook.com/CreativeTim" rel="nofollow"> 
-                    <i class="fa fa-facebook-square"></i>
-                    Facebook
-                </a>
                 <a id="instagram" class="btn btn-raised btn-instagram" href="https://www.instagram.com/CreativeTimOfficial" rel="nofollow">
                     <i class="fa fa-instagram"></i>
                     Instagram
