--- a/examples/profile-page.html
+++ b/examples/profile-page.html
@@ -92,6 +92,11 @@
             underrepresented groups. Lately, my free time is occupied with digital drawings, baking, YouTube, 
             and catching up with friends. 
         </p>
+
+        <br> 
+        <p>
+          I've been trying to improve my Illustrator skills over the past few weeks. Below are a few pieces I've been working on!
+        </p>
         </div>
         <div class="row">
           <div class="col-md-6 ml-auto mr-auto">
@@ -99,17 +104,12 @@
               <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
                 <li class="nav-item">
                   <a class="nav-link active" href="#studio" role="tab" data-toggle="tab">
-                    <i class="material-icons">camera</i> Studio
+                    <i class="material-icons">camera</i> Portraits
                   </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#works" role="tab" data-toggle="tab">
-                    <i class="material-icons">palette</i> Work
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#favorite" role="tab" data-toggle="tab">
-                    <i class="material-icons">favorite</i> Favorite
+                    <i class="material-icons">palette</i> Group
                   </a>
                 </li>
               </ul>
@@ -120,38 +120,29 @@
           <div class="tab-pane active text-center gallery" id="studio">
             <div class="row">
               <div class="col-md-3 ml-auto">
-                <img src="../assets/img/examples/studio-1.jpg" class="rounded">
-                <img src="../assets/img/examples/studio-2.jpg" class="rounded">
+                <img src="../assets/img/illustrator/bijoy6_rocks.png" class="rounded">
+                <img src="../assets/img/illustrator/megha4.png" class="rounded">
+                <img src="../assets/img/illustrator/nikki2.png" class="rounded">
               </div>
               <div class="col-md-3 mr-auto">
-                <img src="../assets/img/examples/studio-5.jpg" class="rounded">
-                <img src="../assets/img/examples/studio-4.jpg" class="rounded">
+                <img src="../assets/img/illustrator/shriya5.png" class="rounded">
+                <img src="../assets/img/illustrator/sindhu3.png" class="rounded">
+                <img src="../assets/img/illustrator/pranita4.png" class="rounded">
               </div>
             </div>
           </div>
           <div class="tab-pane text-center gallery" id="works">
             <div class="row">
               <div class="col-md-3 ml-auto">
-                <img src="../assets/img/examples/olu-eletu.jpg" class="rounded">
-                <img src="../assets/img/examples/clem-onojeghuo.jpg" class="rounded">
-                <img src="../assets/img/examples/cynthia-del-rio.jpg" class="rounded">
+                <img src="../assets/img/illustrator/group/core2.png" class="rounded">
+                <img src="../assets/img/illustrator/group/dhruvi4.png" class="rounded">
+                <img src="../assets/img/illustrator/group/dp_garba.png" class="rounded">
+                <img src="../assets/img/illustrator/group/spain_pic_done.png" class="rounded">
               </div>
               <div class="col-md-3 mr-auto">
-                <img src="../assets/img/examples/mariya-georgieva.jpg" class="rounded">
-                <img src="../assets/img/examples/clem-onojegaw.jpg" class="rounded">
-              </div>
-            </div>
-          </div>
-          <div class="tab-pane text-center gallery" id="favorite">
-            <div class="row">
-              <div class="col-md-3 ml-auto">
-                <img src="../assets/img/examples/mariya-georgieva.jpg" class="rounded">
-                <img src="../assets/img/examples/studio-3.jpg" class="rounded">
-              </div>
-              <div class="col-md-3 mr-auto">
-                <img src="../assets/img/examples/clem-onojeghuo.jpg" class="rounded">
-                <img src="../assets/img/examples/olu-eletu.jpg" class="rounded">
-                <img src="../assets/img/examples/studio-1.jpg" class="rounded">
+                <img src="../assets/img/illustrator/group/ghc.jpg" class="rounded">
+                <img src="../assets/img/illustrator/group/montreal2.png" class="rounded">
+                <img src="../assets/img/illustrator/group/soiree.png" class="rounded">
               </div>
             </div>
           </div>
@@ -160,18 +151,18 @@
     </div>
   </div>
 
-  <!--   Core JS Files   -->
-  <script src="../assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="../assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-  <script src="../assets/js/plugins/moment.min.js"></script>
-  <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-  <script src="../assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
-  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <script src="../assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
-  <!--  Google Maps Plugin    -->
-  <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-  <script src="../assets/js/material-kit.js?v=2.0.7" type="text/javascript"></script>
+    <!--   Core JS Files   -->
+    <script src="../assets/js/core/jquery.min.js" type="text/javascript"></script>
+    <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
+    <script src="../assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+    <script src="../assets/js/plugins/moment.min.js"></script>
+    <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
+    <script src="../assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+    <script src="../assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+    <!--  Google Maps Plugin    -->
+    <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+    <script src="../assets/js/material-kit.js?v=2.0.7" type="text/javascript"></script>
 </body>
 
 </html>
