--- a/examples/profile-page.html
+++ b/examples/profile-page.html
@@ -15,15 +15,18 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
       <!-- CSS Files -->
       <link href="../assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
+      <link href="../css/profile.css" rel="stylesheet" />
   </head>
 
 <body class="profile-page sidebar-collapse">
-  <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
+  <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" 
+       color-on-scroll="100" id="sectionsNav">
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" href="../index.html">
           Home </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" 
+                aria-expanded="false" aria-label="Toggle navigation">
           <span class="sr-only">Toggle navigation</span>
           <span class="navbar-toggler-icon"></span>
           <span class="navbar-toggler-icon"></span>
@@ -65,15 +68,17 @@
       </div>
     </div>
   </nav>
-  <div class="page-header header-filter" data-parallax="true" style="background-image: url('../assets/img/mont.jpg');"></div>
-  <div class="main main-raised">
+  <div class="page-header header-filter" data-parallax="true" 
+      style="background-image: url('../assets/img/mont.jpg');"></div>
+  <div id="profile-back-panel" class="main main-raised">
     <div class="profile-content">
       <div class="container">
         <div class="row">
           <div class="col-md-6 ml-auto mr-auto">
             <div class="profile">
               <div class="avatar">
-                <img src="../assets/img/faces/sintra.jpg" alt="Circle Image" class="img-raised rounded-circle img-fluid">
+                <img src="../assets/img/faces/sintra.jpg" alt="Circle Image" 
+                      class="img-raised rounded-circle img-fluid">
               </div>
               <div class="name">
                 <h3 class="title">Mounica Kamesam</h3>
@@ -95,7 +100,8 @@
 
         <br> 
         <p>
-          I've been trying to improve my Illustrator skills over the past few weeks. Below are a few pieces I've been working on!
+          I've been trying to improve my Illustrator skills over the past few weeks. 
+          Below are a few pieces I've been working on!
         </p>
         </div>
         <div class="row">
@@ -104,12 +110,12 @@
               <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
                 <li class="nav-item">
                   <a class="nav-link active" href="#studio" role="tab" data-toggle="tab">
-                    <i class="material-icons">camera</i> Portraits
+                    <i class="material-icons">person</i> Portraits
                   </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#works" role="tab" data-toggle="tab">
-                    <i class="material-icons">palette</i> Group
+                    <i class="material-icons">group</i> Group
                   </a>
                 </li>
               </ul>
@@ -120,7 +126,7 @@
           <div class="tab-pane active text-center gallery" id="studio">
             <div class="row">
               <div class="col-md-3 ml-auto">
-                <img src="../assets/img/illustrator/bijoy6_rocks.png" class="rounded">
+                <img id="image1" src="../assets/img/illustrator/bijoy6_rocks.png" class="rounded">
                 <img src="../assets/img/illustrator/megha4.png" class="rounded">
                 <img src="../assets/img/illustrator/nikki2.png" class="rounded">
               </div>
@@ -153,6 +159,8 @@
 
     <!--   Core JS Files   -->
     <script src="../assets/js/core/jquery.min.js" type="text/javascript"></script>
+    <script src="test.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
     <script src="../assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
     <script src="../assets/js/plugins/moment.min.js"></script>
