--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
         </nav>
 
-        <div class="page-header header-filter clear-filter purple-filter" data-parallax="true" style="background-image: url('./assets/img/mounica.jpeg');">
+        <div class="page-header header-filter clear-filter" data-parallax="true" style="background-image: url('./assets/img/mounica.jpeg');">
             <div class="container">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
@@ -110,22 +110,6 @@
             </div>
             
             <div class="section section-download" id="downloadSection">
-            <div class="container">
-            
-                <div class="sharing-area text-center">
-                <div class="row justify-content-center">
-                    <h3>let's connect!</h3>
-                </div>
-                <a id="instagram" class="btn btn-raised btn-instagram" href="https://www.instagram.com/CreativeTimOfficial" rel="nofollow">
-                    <i class="fa fa-instagram"></i>
-                    Instagram
-                </a>
-                <a id="github" href="https://github.com/creativetimofficial/material-kit" target="_blank" class="btn btn-raised btn-github" rel="nofollow">
-                    <i class="fa fa-github"></i>
-                    Github
-                </a>
-                </div>
-            </div>
             </div>
         <!-- </div> -->
 
